remove spacing beneath tables (fixes improper nested table aesthetic)

--- a/app/assets/stylesheets/fae/modules/_tables.scss
+++ b/app/assets/stylesheets/fae/modules/_tables.scss
@@ -3,7 +3,6 @@
 	border: 1px solid $c-border;
 	border-collapse: separate;
 	table-layout: fixed;
-	margin-bottom: 30px;
 
 	@include bp(tablet) {
 		table-layout: fixed;
